--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.wunderlist:sliding-layer:1.2.5'
+    implementation 'com.android.volley:volley:1.1.1'
+
+
 
 }
